--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project_syncfusion_dashboard",
+  "name": "kanban useing reactjs",
   "version": "0.1.0",
-  "private": true,
+  "author": "torik135",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
