--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban useing reactjs",
+  "name": "kanban using reactjs",
   "version": "0.1.0",
   "author": "torik135",
   "dependencies": {
